Moving to a flask server

--- a/facemash.html
+++ b/facemash.html
@@ -13,12 +13,12 @@
 		</div>
 		<div class="center">
 			<div class="imgView" onclick="onLeftImageClicked()">
-				<img id="leftImage" src="/home/aniruddha/temp/tbs/student/181115.jpg">
+				<img id="leftImage" src="">
 			</div>
 			<!--TODO figure out how to centre the OR-->
 			<div class="or"> OR </div>
 			<div class="imgView" onclick="onRightImageClicked()">
-				<img id="rightImage" src="/home/aniruddha/temp/tbs/student/181112.jpg">
+				<img id="rightImage" src="">
 			</div>
 		</div>
 		<div class="center">
